Colaboratory を使用して作成しました

--- a/pytute001.ipynb
+++ b/pytute001.ipynb
@@ -1561,43 +1561,7 @@
         "id": "RzvUMnTQv9bz"
       },
       "source": [
-        "また、`+=` や `-=` もよく使います。\n",
-        "これは、演算と代入を合わせて行うもので、**累積代入文 (augmented assignment statement)** と呼ばれます。\n",
-        "\n",
-        "下記に示すとおり、`+=` では左辺の変数に対して右辺の値を足した結果で、左辺の変数を更新します。"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "g7g0hOrOv9b0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "914559f8-251d-4d5c-9edd-6cc9a778c484"
-      },
-      "source": [
-        "# 累積代入文を使わない場合\n",
-        "count = 0\n",
-        "count = count + 1\n",
-        "count"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 40
-        }
+        "また、`+=` や `-=` が使えます。 **累積代入文 (augmented assignment statement)**と呼ばれるらしい。"
       ]
     },
     {
@@ -1609,7 +1573,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "0cbef171-cbc1-4cb8-b965-1f52fcd005a6"
+        "outputId": "969a9ce1-3fb4-48c0-89c1-92a50dd3ab28"
       },
       "source": [
         "# 累積代入文を使う場合\n",
@@ -1617,7 +1581,7 @@
         "count += 1\n",
         "count"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1629,19 +1593,8 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 2
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "AZ7QMIt-v9b3"
-      },
-      "source": [
-        "四則演算の全てで累積代入文を利用することができます。\n",
-        "つまり、`+=`, `-=`, `*=`, `/=` がそれぞれ利用可能です。"
       ]
     },
     {
@@ -1671,13 +1624,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "eb9bdd74-8294-49f5-aae4-a9566f3d7ddf"
+        "outputId": "16832d78-a10c-4214-9a86-4cd28c843208"
       },
       "source": [
         "# 累乗\n",
         "2 ** 3"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1689,7 +1642,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 7
         }
       ]
     },
