Colaboratory を使用して作成しました

--- a/pytute001.ipynb
+++ b/pytute001.ipynb
@@ -107,41 +107,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "unYvpNZCv9aF"
+        "id": "-82sT1zG8E0d",
+        "colab_type": "text"
       },
       "source": [
-        "さらには、初学者にとっても学びやすい言語です。\n",
-        "初学者がプログラミングを学び始めるときにつまづきがちな難しい概念が他の言語と比べ多くなく、入門しやすい言語といえます。\n",
-        "\n",
-        "まとめると、Python には\n",
-        "\n",
-        "- データ解析や機械学習によく使われている\n",
-        "- Web アプリケーションの開発などでもよく使われている\n",
-        "- 初学者がはじめやすい言語\n",
-        "\n",
-        "のような魅力があります。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "jZNTuBQ54BSu"
-      },
-      "source": [
-        "### 文法とアルゴリズム\n",
-        "\n",
-        "プログラミングによってある特定の処理をコンピュータで自動化したい場合、**文法**と**アルゴリズム**の 2 つを理解しておく必要があります。\n",
-        "\n",
-        "プログラムでは、まずはじめにコンピュータに命令を伝えるためのルールとなる**文法**を覚える必要があります。\n",
-        "文法を無視した記述があるプログラムは、実行した際にエラーとなり処理が停止します。そのため、文法はしっかりと理解しておく必要があります。\n",
-        "\n",
-        "ただし、文法さえ理解していれば十分かというとそうではありません。一般的に、初学者向けのプログラミングの参考書では、この文法だけを取り扱うことも多いのですが、コンピュータに処理を自動化させることが目的であれば、文法だけでなく**アルゴリズム**も理解する必要があります。アルゴリズムとは、どういう順番でどのような処理をしていくかの一連の手順をまとめたものです。\n",
-        "\n",
-        "この章では、Python の文法について紹介し、機械学習やディープラーニングで必要となるアルゴリズムについてはこれ以降の章で紹介します。\n",
-        "\n",
-        "ここでは以下 4 つの文法に主眼を置きながら説明していきます。\n",
+        "# Python入門\n",
+        "### 文法\n",
         "\n",
         "- 変数\n",
         "- 制御構文\n",
@@ -160,6 +131,8 @@
         "\n",
         "**変数 (variable)** とは、様々な値を格納することができる、**名前がついた入れ物**です。\n",
         "この変数に値を格納したり、更新したりすることで、計算結果を一時的に保持しておくことができます。\n",
+        "\n",
+        "エスケープは使えるの？\n",
         "\n",
         "### 代入と値の確認\n",
         "\n",
@@ -267,20 +240,6 @@
       },
       "source": [
         "変数名だけをセルに記入して実行する場合と`print()`を利用する場合の違いについては、後述します。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "nGNlqHW_v9aV"
-      },
-      "source": [
-        "変数につける名前は、コードを書く人が自由に決めることができます。\n",
-        "ただし、わかりやすい名前をつけることがとても大切です。\n",
-        "例えば、人の名前を格納するための変数が `a` という変数名だと、それがどのような使われ方をするのかを容易に類推することができません。\n",
-        "`name` という名前であれば、ひと目で見て何のための変数かが分かるようになります。\n",
-        "これは、自分のコードを読む他人や、未来の自分にとってコードを理解するための大きな手がかりとなります。"
       ]
     },
     {
@@ -1581,7 +1540,7 @@
         "count += 1\n",
         "count"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1630,7 +1589,7 @@
         "# 累乗\n",
         "2 ** 3"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
