--- a/pytute001.ipynb
+++ b/pytute001.ipynb
@@ -46,18 +46,9 @@
       },
       "source": [
         "## はじめに その1\n",
+        "このファイルは、Chainer Tutorials : 02_Basics_of_Python.ipynb のコピーです。 いろいろ実験したいので、コピーしました。実験のあとには元のファイルはあとかたもなくなる、かも。\n",
         "\n",
-        "とか。\n",
-        "\n",
-        "このファイルは、Chainer Tutorials : 02_Basics_of_Python.ipynb のコピーです。\n",
-        "\n",
-        "いろいろ実験したいので、コピーしました。\n",
-        "\n",
-        "実験のあとには元のファイルはあとかたもなくなる、かも。\n",
-        "\n",
-        "まずは、google colab の jupyter の使い方を覚える必要がある。 って、これ jupyter そのままなんだよね。 でもキーボードショートカットとか違う。\n",
-        "\n",
-        "あと、元のファイルが日本語だったのでそのまま日本語だけど、tutorial作るつもりならば英語ということも考えたい。 いろいろ翻訳ツールあるしね。"
+        "まずは、google colab の jupyter の使い方を覚える必要がある。 って、これ jupyter そのままなんだよね。 でもキーボードショートカットとかがすこし違う。"
       ]
     },
     {
@@ -67,17 +58,7 @@
         "id": "D3QflLv0qdiy"
       },
       "source": [
-        "# Python 入門とか\n",
-        "\n",
-        "[公式のチュートリアル](https://docs.python.jp/3/tutorial/index.html)などを参照してください。\n",
-        "\n",
-        "って、そう書くのか。 どうすれば escape できるかな。 \n",
-        "\n",
-        "\\[公式のチュートリアル\\]\\(https://docs.python.jp/3/tutorial/index.html \\)などを参照してください。\n",
-        "\n",
-        "-\n",
-        "\n",
-        "`\\[公式のチュートリアル\\]\\(https://docs.python.jp/3/tutorial/index.html \\)などを参照してください。`\n"
+        "# Python 入門とか"
       ]
     },
     {
@@ -94,30 +75,72 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "31kUzKwSJ9Mo",
+        "id": "cNPCfLlxzkF0",
         "colab_type": "text"
       },
       "source": [
-        "# はじめにその２\n",
-        "はやくpythonに行きたいが、まだjupyterでてこずっている。\n",
-        "\n",
-        "pythonはいま最新は 3.7.4 だけど、このテキストは 3.6 をつかっていますって。\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-82sT1zG8E0d",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Python入門\n",
-        "### 文法\n",
-        "\n",
-        "- 変数\n",
-        "- 制御構文\n",
-        "- 関数\n",
-        "- クラス"
+        "# キーボード・ショートカット\n",
+        "colabkey.txt colab.txt  \n",
+        "### 一般  \n",
+        "Ctrl+Shift+P コマンドパレットを開く。  \n",
+        "Ctrl+M H キーボード・ショートカットを表示する。  \n",
+        "Ctrl+M F フォームビュー。  \n",
+        "  \n",
+        "### ファイル管理  \n",
+        "Ctrl+N 新規ノートブック。  \n",
+        "Ctrl+O ノートブックを開く。  \n",
+        "Ctrl+S ノートブックを保存。  \n",
+        "Ctrl+P ノートブックを印刷。  \n",
+        "Ctrl+M S 変更内容を保存して固定。  \n",
+        "  \n",
+        "###セルの実行  \n",
+        "Ctrl+F9 すべてのセルを実行。  \n",
+        "Ctrl+F8 前のセルを実行。  \n",
+        "Ctrl+Enter セルを実行。  \n",
+        "Ctrl+Shift+Enter 選択範囲を実行。  \n",
+        "Ctrl+F10 以降のセルを実行。  \n",
+        "Alt+Enter セルを実行して新しいセルを挿入。  \n",
+        "Shift+Enter セルを実行して次のセルを選択。  \n",
+        "Ctrl+M I 実行を中断。  \n",
+        "Ctrl+M . ランタイムを再起動。  \n",
+        "  \n",
+        "  \n",
+        "### 基本編集操作  \n",
+        "Ctrl+M A 上にコードセルを挿入。  \n",
+        "Ctrl+M B 下にコードセルを挿入。  \n",
+        "(Ctrl+M T) 下にテキストセルを挿入。  \n",
+        "Ctrl+M K 選択したセルを上に移動。  \n",
+        "Ctrl+M J 選択したセルを下に移動。  \n",
+        "Ctrl+M D 選択したセルを削除。  \n",
+        "Ctrl+M O 出力の表示(トグル)。  \n",
+        "Ctrl+M P 前のセル。  \n",
+        "Ctrl+M N 次のセル。  \n",
+        "Ctrl+Shift+A すべてのセルを選択。  \n",
+        "Shift+Up 選択範囲に前のセルを含める。  \n",
+        "Shift+Down 選択範囲に次のセルを含める。  \n",
+        "Ctrl+Alt+N スクラッチ・コード・セルを開く。  \n",
+        "Ctrl+M Z 元に戻す(undo)。  \n",
+        "Ctrl+Shift+Y セルの操作をやり直す(redo)。  \n",
+        "Ctrl+Click セルの選択/解除(トグル)。  \n",
+        "Esc セルの選択を解除。  \n",
+        "Ctrl+M M セルをテキストセルに変換。  \n",
+        "Ctrl+M Y セルをコードセルに変換。  \n",
+        "Ctrl+[/] 折りたたみ/展開。  \n",
+        "Ctrl+' セクションの展開/折りたたみ(トグル)。  \n",
+        "Ctrl+Space or Tab オートコンプリート自動補完候補表示。  \n",
+        "Shift+Ctrl+H セルですべて置換  \n",
+        "Shift+Tab 行のインデントを解除。  \n",
+        "Ctrl+/ 行をコメントにする。  \n",
+        "Ctrl+Alt+M コメントを追加。  \n",
+        "Ctrl+M L 行番号の表示(トグル)。  \n",
+        "Shift+Click 複数のセルを選択。  \n",
+        "Ctrl+M - カーソル位置で分割。  \n",
+        "Ctrl+Alt+P コードスニペット。  \n",
+        "  \n",
+        "###検索と置換  \n",
+        "Ctrl+G グローバル検索。  \n",
+        "Ctrl+H グローバル置換。  \n",
+        "Ctrl+Shift+G 前をグローバル検索。  \n"
       ]
     },
     {
