Colaboratory を使用して作成しました

--- a/pytute001.ipynb
+++ b/pytute001.ipynb
@@ -41,14 +41,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "52G7hMKuY9Ce",
+        "colab_type": "text"
+      },
+      "source": [
+        "# はじめに その1 学習生産性\n",
+        "学習生産性を上げるのに、Jupyter Notebookほどすばらしい環境はないと思う。 文章があって、図が描けて、ノート上でプログラムの実験ができる。\n",
+        "\n",
+        "さらにそれがオンラインでできるのがColabでgithubから開いたり、閉じたりできる。これは本来のgithubとは違う気がしないではないが、まあよい。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "QpzAZ46fGsfs",
         "colab_type": "text"
       },
       "source": [
-        "## はじめに その1\n",
-        "このファイルは、Chainer Tutorials : 02_Basics_of_Python.ipynb のコピーです。 いろいろ実験したいので、コピーしました。実験のあとには元のファイルはあとかたもなくなる、かも。\n",
+        "## はじめに その2\n",
+        "このファイルは、Chainer Tutorials : 02_Basics_of_Python.ipynbのコピーです。 いろいろ実験したいので、コピーしました。実験のあとには元のファイルはあとかたもなくなる、かも。\n",
         "\n",
-        "まずは、google colab の jupyter の使い方を覚える必要がある。 って、これ jupyter そのままなんだよね。 でもキーボードショートカットとかがすこし違う。"
+        "まずは、google colabのjupyterの使い方を覚える必要がある。 って、これ jupyter そのままなんだよね。でもキーボードショートカットとかがすこし違う。"
       ]
     },
     {
@@ -79,7 +92,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# キーボード・ショートカット\n",
+        "## Colabのキーボード・ショートカット\n",
         "colabkey.txt colab.txt  \n",
         "### 一般  \n",
         "Ctrl+Shift+P コマンドパレットを開く。  \n",
@@ -152,14 +165,7 @@
       "source": [
         "## 変数\n",
         "\n",
-        "**変数 (variable)** とは、様々な値を格納することができる、**名前がついた入れ物**です。\n",
-        "この変数に値を格納したり、更新したりすることで、計算結果を一時的に保持しておくことができます。\n",
-        "\n",
-        "エスケープは使えるの？\n",
-        "\n",
-        "### 代入と値の確認\n",
-        "\n",
-        "それでは、`a` という名前の変数に、`1` を**代入**してみましょう。"
+        "**変数 (variable)** とは、様々な値を格納することができる、**名前がついた入れ物**です。\n"
       ]
     },
     {
@@ -226,8 +232,8 @@
       },
       "source": [
         "このように、変数に格納されている値を確認することができました。\n",
-        "また、値を確認するための他の方法として、`print()` と呼ばれる**関数 (function)** を使用することもできます。\n",
-        "関数について詳しくは後述しますが、`print()` のように Python には予め多くの関数が定義されています。 そのような関数を**組み込み関数 (built-in function)** といいます。"
+        "また、値を確認するための他の方法として、`print()` と呼ばれる**組み込み関数 (built-in function)** を使用することもできます。\n",
+        "変数名だけをセルに記入して実行する場合と`print()`を利用する場合の違いについては、後述します。"
       ]
     },
     {
@@ -259,16 +265,6 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "9yizNcBvv9aU"
-      },
-      "source": [
-        "変数名だけをセルに記入して実行する場合と`print()`を利用する場合の違いについては、後述します。"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
         "id": "BQhk7-XfDFhS"
       },
       "source": [
@@ -276,11 +272,10 @@
         "\n",
         "Python では、`#` の後からその行の終わりまでに存在する全ての文字列は無視されます。\n",
         "この `#` の後ろに続く部分を**コメント (comment)**と呼び、すでに書かれたコードをコメントにすることを**コメントアウト (comment out)**と言います。\n",
-        "コメントは、コード中に変数の意味や処理の意味をコードを読む人に伝えるためによく使われます。\n",
         "\n",
-        "Jupyter Notebook のコードセルに書かれたコードを行ごとコメントアウトしたい場合は、その行を選択した状態で `Ctrl + /` を入力することで自動的に行の先頭に `#` 記号を挿入することができます。複数行を選択していれば、選択された複数の行が同時にコメントアウトされます。また、コメントアウトされている行を選択した状態で同じキー入力を送ると、コメントアウトが解除されます。これを**アンコメント (uncomment)**と呼ぶこともあります。\n",
+        "Jupyter Notebook のコードセルに書かれたコードを行ごとコメントアウトしたい場合は、その行を選択した状態で `Ctrl + /` を入力することで自動的に行の先頭に `#` 記号を挿入することができます。複数行を選択していれば、選択された複数の行が同時にコメントアウトされます。また、コメントアウトされている行を選択した状態で同じキー入力を送ると、コメントアウトが解除されます。これを**アンコメント (uncomment)**と呼びます。\n",
         "\n",
-        "下のセルを実行してみましょう。"
+        "ちなみに`Ctrl + /`はVSCodeでも同じです。\n"
       ]
     },
     {
@@ -296,17 +291,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "_xAqta5WIfGJ"
-      },
-      "source": [
-        "`print(a)` が書かれているにも関わらず、何も表示されませんでした。\n",
-        "これは、`print(a)` 関数が書かれた行がコメントアウトされていたためです。"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -476,6 +460,8 @@
       "source": [
         "`a` は `int` という整数の型をもつ変数であり、`b` は `float` という実数の型をもつ変数です。\n",
         "この `float` という型の名前は、コンピュータ内で実数を扱うときの形式である**浮動小数点数 (floating-point number)** に由来しています。\n",
+        "\n",
+        "!!!! と言い切っているが、いいのか？ やっぱfloatとreal numberは違うだろう、と思うのですが、どうでしょうか。\n",
         "\n",
         "`c` は `str` という文字列の型をもつ変数であり、値を定義するにはシングルクォーテーション `' '` もしくはダブルクォーテーション `\" \"` で対象の文字列をくくる必要があります。"
       ]
@@ -657,71 +643,6 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "g3BdGDJaIfEr"
-      },
-      "source": [
-        "一方、`.5` と書くと、これは `0.5` の略記と解釈されることに注意してください。"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "aXpxR7WmIfEs",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "f6ade488-902d-4d96-9cc0-e0a96caca7f6"
-      },
-      "source": [
-        "type(.5)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "float"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 16
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "enBKbL9fIfEx",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "992db59f-1989-4d2d-db0d-241aa434cc83"
-      },
-      "source": [
-        "print(.5)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0.5\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
         "id": "xIr4oyIav9a-"
       },
       "source": [
@@ -873,46 +794,6 @@
             "tags": []
           },
           "execution_count": 21
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "ai1hzuv6v9bJ"
-      },
-      "source": [
-        "値が代入されている変数との演算も下記のように行うことができます。"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "yvA4BP5hIfFJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "cedf23b1-33b6-4f96-c655-9b64346e755c"
-      },
-      "source": [
-        "a + 2"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
         }
       ]
     },
@@ -1246,30 +1127,14 @@
       "metadata": {
         "colab_type": "code",
         "id": "ia8mAAr5v9bj",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 172
-        },
-        "outputId": "38cd2f68-c08d-4abe-c8bf-300d8c8b1154"
+        "colab": {}
       },
       "source": [
-        "# error\n",
-        "a + c"
+        "# 次の行をuncommentして、エラーになることを確かめよ\n",
+        "# a + c"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-32-e81e582b6fa9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
-          ]
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1694,6 +1559,16 @@
         "ブール型の値は `True` もしくは `False` の 2 つしか存在しません。\n",
         "\n",
         "いくつかの比較演算子の計算例を示します。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gQR-WVHRnin5",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
