Colaboratory を使用して作成しました

--- a/colab_github_demo.ipynb
+++ b/colab_github_demo.ipynb
@@ -46,7 +46,7 @@
         "## 公開されているノートブックを直接開く\n",
         "公開されているノートブックは承認ステップなしに開くことができます。\n",
         "\n",
-        "たとえば、ノートブックのアドレスがgithub.com/なんちゃら.ipynbとすると、colabで開く時のリンクはcolab.research.google.com/なんちゃら。ipynbです。\n",
+        "たとえば、ノートブックのアドレスがgithub.com/なんちゃら.ipynbとすると、colabで開く時のリンクはcolab.research.google.com/なんちゃら.ipynbです。\n",
         "\n",
         "linkを自動化するには、Open in Colabというchrome拡張機能を使うか、ノートブック自体にOpen in Colabというボタンを貼り付けておけば便利です。\n"
       ]
@@ -58,14 +58,16 @@
         "id": "WzIRIt9d2huC"
       },
       "source": [
-        "## Browsing GitHub Repositories from Colab\n",
+        "## GitHubレポジトリーをColabから検索する\n",
         "\n",
-        "Colab also supports special URLs that link directly to a GitHub browser for any user/organization, repository, or branch. For example:\n",
+        "以下のURLで直接ColabからGitHubを検索することができます。\n",
         "\n",
-        "- http://colab.research.google.com/github will give you a general github browser, where you can search for any github organization or username.\n",
-        "- http://colab.research.google.com/github/googlecolab/ will open the repository browser for the ``googlecolab`` organization. Replace ``googlecolab`` with any other github org or user to see their repositories.\n",
-        "- http://colab.research.google.com/github/googlecolab/colabtools/ will let you browse the main branch of the ``colabtools`` repository within the ``googlecolab`` organization. Substitute any user/org and repository to see its contents.\n",
-        "- http://colab.research.google.com/github/googlecolab/colabtools/blob/master will let you browse ``master`` branch of the ``colabtools`` repository within the ``googlecolab`` organization. (don't forget the ``blob`` here!) You can specify any valid branch for any valid repository."
+        "- http://colab.research.google.com/github \n",
+        "- http://colab.research.google.com/github/googlecolab/\n",
+        "- http://colab.research.google.com/github/googlecolab/colabtools/ \n",
+        "- http://colab.research.google.com/github/googlecolab/colabtools/blob/master \n",
+        "\n",
+        "探すものが決まっている場合でないと、あまり役に立たないと思う。"
       ]
     },
     {
@@ -75,8 +77,7 @@
         "id": "Rmai0dD30XzL"
       },
       "source": [
-        "## Loading Private Notebooks\n",
-        "\n",
+        "## 非公開(private)のノートブックを開く\n",
         "Loading a notebook from a private GitHub repository is possible, but requires an additional step to allow Colab to access your files.\n",
         "Do the following:\n",
         "\n",
