Colaboratory を使用して作成しました

--- a/colab_github_demo.ipynb
+++ b/colab_github_demo.ipynb
@@ -60,14 +60,13 @@
       "source": [
         "## GitHubレポジトリーをColabから検索する\n",
         "\n",
-        "以下のURLで直接ColabからGitHubを検索することができます。\n",
+        "以下のURLで直接ColabからGitHubを検索することができます。  \n",
+        "探すものが決まっている場合でないと、あまり役に立たないと思う。\n",
         "\n",
         "- http://colab.research.google.com/github \n",
         "- http://colab.research.google.com/github/googlecolab/\n",
         "- http://colab.research.google.com/github/googlecolab/colabtools/ \n",
-        "- http://colab.research.google.com/github/googlecolab/colabtools/blob/master \n",
-        "\n",
-        "探すものが決まっている場合でないと、あまり役に立たないと思う。"
+        "- http://colab.research.google.com/github/googlecolab/colabtools/blob/master \n"
       ]
     },
     {
@@ -78,13 +77,12 @@
       },
       "source": [
         "## 非公開(private)のノートブックを開く\n",
-        "Loading a notebook from a private GitHub repository is possible, but requires an additional step to allow Colab to access your files.\n",
-        "Do the following:\n",
+        "非公開(private)のノートブックを開くこともできますが、次の手順が必要です:\n",
         "\n",
-        "1. Navigate to http://colab.research.google.com/github.\n",
-        "2. Click the \"Include Private Repos\" checkbox.\n",
-        "3. In the popup window, sign-in to your Github account and authorize Colab to read the private files.\n",
-        "4. Your private repositories and notebooks will now be available via the github navigation pane."
+        "1. http://colab.research.google.com/github へ行く。\n",
+        "2. \"Include Private Repos\" checkbox をクリックする。\n",
+        "3. ポップアップウィンドウでGithubアカウントでサインインして、非公開ファイルを読む権限を得る。\n",
+        "4. 非公開レポジトリーとノートブックがナビゲーションペインに現れて、読めるようになっている。"
       ]
     },
     {
@@ -94,11 +92,17 @@
         "id": "8J3NBxtZpPcK"
       },
       "source": [
-        "## Saving Notebooks To GitHub or Drive\n",
+        "## ノートブックをGitHubやドライブに保存する\n",
+        "GitHubにホストされているノートブックをColabで開くと、開かれるのは新たに編集可能なノートブックです。変更しても元のファイルに上書きされません。\n",
         "\n",
-        "Any time you open a GitHub hosted notebook in Colab, it opens a new editable view of the notebook. You can run and modify the notebook without worrying about overwriting the source.\n",
+        "Colabから変更を保存するには、ファイルメニューで\n",
+        "If you would like to save your changes from within Colab, you can use the File menu to save the modified notebook either to Google Drive or back to GitHub. Choose\n",
+        "- **File→Save a copy in Drive**   \n",
         "\n",
-        "If you would like to save your changes from within Colab, you can use the File menu to save the modified notebook either to Google Drive or back to GitHub. Choose **File→Save a copy in Drive** or **File→Save a copy to GitHub** and follow the resulting prompts. To save a Colab notebook to GitHub requires giving Colab permission to push the commit to your repository."
+        "か\n",
+        "- **File→Save a copy to GitHub**   \n",
+        "\n",
+        "を選択し、その後の指示に従ってください。 ColabノートブックをGitHubに保存するにはColabにcommitをpushする権限がひつ用です。"
       ]
     },
     {
@@ -108,20 +112,18 @@
         "id": "8QAWNjizy_3O"
       },
       "source": [
-        "## Open In Colab Badge\n",
-        "\n",
-        "Anybody can open a copy of any github-hosted notebook within Colab. To make it easier to give people access to live views of GitHub-hosted notebooks,\n",
-        "colab provides a [shields.io](http://shields.io/)-style badge, which appears as follows:\n",
+        "## Open In Colab バッジ\n",
+        "GitHubにホストされているノートブックを開きやすくするために[shields.io](http://shields.io/)スタイルのバッジ(ボタン)を作りました。\n",
         "\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)\n",
         "\n",
-        "The markdown for the above badge is the following:\n",
+        "このバッジ(ボタン)のmarkdownは次のようなものです:\n",
         "\n",
         "```markdown\n",
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)\n",
         "```\n",
         "\n",
-        "The HTML equivalent is:\n",
+        "これをHTMLで書くと次のようになります:\n",
         "\n",
         "```HTML\n",
         "<a href=\"https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb\">\n",
@@ -129,21 +131,8 @@
         "</a>\n",
         "```\n",
         "\n",
-        "Remember to replace the notebook URL in this template with the notebook you want to link to."
+        "当然ですが、URLの部分は変わります。"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
-        "id": "3VQqVi-3ScBC",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
