--- a/colabmarkdown001.ipynb
+++ b/colabmarkdown001.ipynb
@@ -28,6 +28,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "IafBX3BqFzhw",
+        "colab_type": "text"
+      },
+      "source": [
+        "# はじめに"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "colab_type": "text",
         "id": "uTnBkRyvGvhW"
       },
