Colaboratory を使用して作成しました

--- a/colabmarkdown001.ipynb
+++ b/colabmarkdown001.ipynb
@@ -32,7 +32,12 @@
         "colab_type": "text"
       },
       "source": [
-        "# はじめに"
+        "# はじめに\n",
+        "\n",
+        "Colabのマークダウンのドキュメントがあったので、それを翻訳しながら考える。\n",
+        "\n",
+        "ColabというかJupyter Notebookでもいいのですが、Pythongが実行できるノートとか、Colabならば機械学習環境ができているとかが話題になって、それはそれですばらしいことなのですが、それらがマークダウンで書かれたテキストの中にあることの重要性を声を大にして言いたい。\n",
+        "\n"
       ]
     },
     {
@@ -56,40 +61,11 @@
         "id": "70pYkR9LiOV0"
       },
       "source": [
-        "## マークダウンとは\n",
+        "# マークダウンとは\n",
         "\n",
         "Colabはテキストセルとコードセルの2種類のタイプのセルがあります。  \n",
         "テキストセルに使われる簡単な整形用マークアップ言語がマークダウンと呼ばれ、ベースとなっているのは、based on [the original](https://daringfireball.net/projects/markdown/syntax)` = https://daringfireball.net/projects/markdown/syntax`です。\n",
-        "\n",
-        "\n",
-        "## クイック・レファレンス(簡易マニュアル)\n",
-        "\n",
-        "To see the markdown source, double-click a text cell, showing both the markdown source (above) and the rendered version (below). Above the markdown source there is a toolbar to assist editing.\n",
-        "\n",
-        "Headers are created using \\#. Use multiple \\#\\#\\# for less emphasis. For example:\n",
-        ">\\# This is equivalent to an &lt;h1> tag\n",
-        "\n",
-        ">\\##### This is equivalent to an &lt;h5> tag\n",
-        "\n",
-        "To make text **bold** surround it with \\*\\*two asterisks\\*\\*. To make text *italic* use a \\*single asterisk\\* or \\_underscore\\_. \\\n",
-        "_**Bold** inside italics_ and **vice-_versa_** also work. ~~Strikethrough~~ uses \\~\\~two tildes\\~\\~ while `monospace` (such as code) uses \\`backtick\\`.\n",
-        "\n",
-        "Blocks are indented with \\>, and multiple levels of indentation are indicated by repetition: \\>\\>\\> indents three levels.\n",
-        "\n",
-        "Ordered lists are created by typing any number followed by a period at the beginning of a line. Unordered lists are \\* or - at the beginning of a line. Lists can be nested by indenting using two spaces for each level of nesting.\n",
-        "\n",
-        "[Links](https://research.google.com/colaboratory) are created with \\[brackets around the linked text\\](and-parentheses-around-the-url.html). Naked URLs, like https://google.com, will automatically be linkified.\n",
-        "Another way to create links is using references, which look like [brackets around the linked text][an-arbitrary-reference-id] and then, later anywhere in the cell on its own line, \\[an-arbitrary-reference-id]: followed-by-a-URL.html\n",
-        "\n",
-        "A '!' character in front of a link turns it into an inline image link: !\\[Alt text]\\(link-to-an-image.png).\n",
-        "\n",
-        "$\\LaTeX$ equations are surrounded by `$`. For example, `$y = 0.1 x$` renders as the following inline equation: $y = 0.1 x$. Double the `$` to set the contents off on its own centered line.\n",
-        "\n",
-        "Horizontal rules are created with three or more hyphens, underscores, or asterisks (\\-\\-\\-, \\_\\_\\_, or \\*\\*\\*) on their own line.\n",
-        "\n",
-        "Tables are created using \\-\\-\\- for the boundary between the column header and columns and \\| between the columns.\n",
-        "\n",
-        "Please see also [GitHub's documentation](https://help.github.com/articles/basic-writing-and-formatting-syntax/) for a similar (but not identical) version of markdown."
+        "\n"
       ]
     },
     {
