Colaboratory を使用して作成しました

--- a/test_markdown001.ipynb
+++ b/test_markdown001.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled1.ipynb",
+      "name": "test_markdown001.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyManFVy/4nXiYbNpcW1epjG",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNsa9i4xAU8FXwEaIU9kxYb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,12 +36,28 @@
         "GitHubとColabの連携はわかりました。 だいたいわかったと思う。 とりあえず使えています。 で、これをはてなとかQiitaの記事にする場合、Colabのファイルメニューにマークダウンに変換がないみたいなので、一旦パソコンで\n",
         "\n",
         "```\n",
-        "nbconvert --to markdown filename.ipynb\n",
+        "jupyter nbconvert --to markdown filename.ipynb\n",
         "```\n",
         "\n",
         "として、できあがったfilename.mdをテキストエディターで開いて貼り付けるというのをかんがえました。\n",
         "\n",
-        "その際、GitHubでのファイル名とか`Open in Colab`ボタンとかはどうなってしまうのか。実験してみよう。"
+        "その際、GitHubでのファイル名とか`Open in Colab`ボタンとかはどうなってしまうのか。実験してみよう。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qH4bOyF8dcvS",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "# はてなでの実験結果\n",
+        "このファイルはhttps://github.com/kalz2q/myjupyternotebooks/blob/master/test_markdown001.ipynb です。これをColabで編集して、GitHubに保存するときにできる`Open in Colab`というボタンがあります。\n",
+        "\n",
+        "`nbconvert`してできた`.md`ファイルをはてなに貼り付けると、`Open in Colab`ボタンも貼り付けられますが、リンクしているのははてなの記事ではなく、もとのGitHubのファイルです。まああたりまえか。\n",
+        "\n",
+        "ということは明示的にGitHubのファイル名を書かなくてもボタンのリンク先から辿れるので隠していることにはならない。が、書いた方がはっきりする、というところか。\n"
       ]
     }
   ]
