--- a/colabmarkdown001.ipynb
+++ b/colabmarkdown001.ipynb
@@ -34,7 +34,10 @@
       "source": [
         "# はじめに\n",
         "\n",
-        "Colabのマークダウンのドキュメントがあったので、それを翻訳しながら考える。\n",
+        "このファイルはhttps://github.com/kalz2q/myjupyternotebooks/blob/master/colabmarkdown001.ipynb\n",
+        "です。\n",
+        "\n",
+        "Colabのマークダウンのドキュメントがあったので、それを翻訳しながら考えます。\n",
         "\n",
         "ColabというかJupyter Notebookでもいいのですが、Pythonが実行できるノートとか、Colabならば機械学習環境ができているとかが話題になって、それはそれですばらしいことなのですが、それらがマークダウンで書かれたテキストの中にあることの重要性を声を大にして言いたい。\n",
         "\n",
@@ -102,7 +105,11 @@
         "id": "eYaIiIaJOPqi"
       },
       "source": [
-        "## Examples"
+        "## 例\n",
+        "\n",
+        "例をまず見たほうがわかりやすいかもしれません。\n",
+        "\n",
+        "以下、マークダウンの機能がわかりやすいように、まず表示したいように書いて、再度マークダウンの部分をコードとして表示します。それでもわかりにくいと思うのでColabのセル編集で開いて実験して見て下さい。"
       ]
     },
     {
@@ -112,9 +119,11 @@
         "id": "tPqPXAKKkzaM"
       },
       "source": [
-        "Examples of markdown text with tags repeated, escaped the second time, to clarify their function:\n",
+        "##### \\#\\#\\#\\#\\#This text is treated as an \\<h5\\> because it has five hashes at the beginning\n",
         "\n",
-        "##### \\#\\#\\#\\#\\#This text is treated as an <h5> because it has five hashes at the beginning\n",
+        "```markdown\n",
+        "##### \\#\\#\\#\\#\\#This text is treated as an \\<h5\\> because it has five hashes at the beginning\n",
+        "```\n",
         "\n",
         "\\**italics*\\* and \\__italics_\\_\n",
         "\n",
