Colaboratory を使用して作成しました

--- a/colabmarkdown001.ipynb
+++ b/colabmarkdown001.ipynb
@@ -220,7 +220,9 @@
         "An inline image: !\\[Google's logo](https://www.google.com/images/logos/google_logo_41.png)\n",
         ">![Google's logo](https://www.google.com/images/logos/google_logo_41.png)\n",
         "\n",
-        "`\\LaTeX`とかは使えないみたい。なにかを`include`すれば使えるのだろうか。\n",
+        "`$\\LaTeX$`も使える$\\LaTeX$\n",
+        "\n",
+        "MathJaxが入っているということです。\n",
         "\n"
       ]
     },
@@ -231,8 +233,7 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "Equations:\n",
+        "## 数式\n",
         "\n",
         ">$y=x^2$\n",
         "\n",
@@ -250,7 +251,7 @@
         "  a_{m,1} & a_{m,2} & \\cdots & a_{m,n}\n",
         " \\end{pmatrix}$\n",
         "\n",
-        "Tables:\n",
+        "## 表\n",
         ">```\n",
         "First column name | Second column name\n",
         "--- | ---\n",
@@ -265,7 +266,7 @@
         ">Row 1, Col 1 | Row 1, Col 2\n",
         ">Row 2, Col 1 | Row 2, Col 2\n",
         "\n",
-        "Horizontal rule done with three dashes (\\-\\-\\-):\n",
+        "横線はダッシュ3つで描けます (\\-\\-\\-):\n",
         "\n",
         "---\n",
         "\n"
@@ -278,15 +279,15 @@
         "id": "w86a4I4fmkvD"
       },
       "source": [
-        "## Differences between Colaboratory markdown and other markdown dialects\n",
+        "## Colabのマークダウンとその他のマークダウン方言との違い\n",
         "\n",
-        "Colaboratory uses [marked.js](https://github.com/chjj/marked) and so is similar but not quite identical to the markdown used by Jupyter and Github.\n",
+        "Colabのマークダウンは[marked.js](https://github.com/chjj/marked)を使っているので、JupyterやGitHubとほとんど同じですが多少の違いがあります。\n",
         "\n",
-        "The biggest differences are that Colaboratory supports (MathJax) $\\LaTeX$ equations like Jupyter, but does not allow HTML tags in the markdown unlike most other markdowns.\n",
+        "最大の違いは(MathJax) $\\LaTeX$が使える点までは同じなのですが、ColabではHTMLタグがマークダウンの中からは使えません。\n",
         "\n",
-        "Smaller differences are that Colaboratory does not support syntax highlighting in code blocks, nor does it support some GitHub additions like emojis and to-do checkboxes.\n",
+        "またこれは小さい問題ですが、Colabではコードブロックにシンタックスはいライティングがありません。また、GitHubのようなemojiやto-do checkboxをサポートしていません。\n",
         "\n",
-        "If HTML must be included in a Colaboratory notebook, see the [%%html magic](/notebooks/basic_features_overview.ipynb#scrollTo=qM4myQGfQboQ)."
+        "もし、ColabのノートブックにHTMLを入れたい場合のやりかたは、[%%html magic](/notebooks/basic_features_overview.ipynb#scrollTo=qM4myQGfQboQ)を参照してください。"
       ]
     },
     {
@@ -296,8 +297,7 @@
         "id": "uSx6SUb1Komv"
       },
       "source": [
-        "## 参考サイト\n",
-        "Useful references"
+        "## 参考サイト (Useful references)"
       ]
     },
     {
