--- a/01_colabfeatures001.ipynb
+++ b/01_colabfeatures001.ipynb
@@ -108,6 +108,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "colab_type": "text",
+        "id": "7bqjkGKwQSHW"
+      },
+      "source": [
+        "## セルの追加と移動\n",
+        "マウスをセルとセルの間に持っていくと、 **+コード** と **+テキスト** というボタンが現れます。このボタンはノートブックの上部にあるツールバー上にもありり、対象となっているセルの下にコードセルやテキストセルを追加します。\n",
+        "\n",
+        "セルの移動はセルの上部にある **↑** と **↓** で動かすことができます。\n",
+        "\n",
+        "連続したセルはセルの外側から囲むことで一度の選択することができます。連続していないセルはCtrlキーを押しながらクリックすることで選択できます。Shiftを押しながらクリックすると2つのセルの間にあるセルも含めて選択されます。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "SjOnxC09ZSLt",
         "colab_type": "text"
       },
@@ -119,31 +134,13 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "7bqjkGKwQSHW"
-      },
-      "source": [
-        "## セルの追加と移動\n",
-        "マウスをセルとセルの間に持っていくと、 **+コード** と **+テキスト** というボタンが現れます。このボタンはノートブックの上部にあるツールバー上にもありり、対象となっているセルの下にコードセルやテキストセルを追加します。\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "You can add new cells by using thethat show when you hover between cells. These buttons are also in the toolbar above the notebook where they can be used to add a cell below the currently selected cell.\n",
-        "\n",
-        "You can move a cell by selecting it and clicking **Cell Up** or **Cell Down** in the top toolbar. \n",
-        "\n",
-        "Consecutive cells can be selected by \"lasso selection\" by dragging from outside one cell and through the group.  Non-adjacent cells can be selected concurrently by clicking one and then holding down Ctrl while clicking another.  Similarly, using Shift instead of Ctrl will select all intermediate cells."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
         "id": "GOwlZRXEQSHZ"
       },
       "source": [
-        "# Working with python\n",
-        "Colaboratory is built on top of [Jupyter Notebook](https://jupyter.org/). Below are some examples of convenience functions provided."
+        "# Python プログラムの実行\n",
+        "Colab は [Jupyter Notebook](https://jupyter.org/) をもとにつくらてています。\n",
+        "\n",
+        "以下に便利な機能を紹介します。"
       ]
     },
     {
@@ -153,7 +150,19 @@
         "id": "RVuqWUXPQSHa"
       },
       "source": [
-        "Long running python processes can be interrupted. Run the following cell and select **Runtime -> Interrupt execution** (*hotkey: Cmd/Ctrl-M I*) to stop execution."
+        "時間のかかる処理は中断(インターラプト)することができます。\n",
+        "\n",
+        "**ランタイム -> 実行を中断** (またはキーボードショートカット *Cmd/Ctrl-M I* )で処理の実行は中断されます。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5GSa59VaOeeS",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -163,9 +172,10 @@
         "colab_type": "code",
         "id": "d-S-3nYLQSHb",
         "colab": {
-          "height": 244
+          "base_uri": "https://localhost:8080/",
+          "height": 233
         },
-        "outputId": "38d534fc-8b61-4f9f-d731-74b23aadb5bc"
+        "outputId": "95f4d4f1-292a-4205-852a-f49031eea47c"
       },
       "source": [
         "import time\n",
@@ -173,7 +183,7 @@
         "time.sleep(30) # sleep for a while; interrupt me!\n",
         "print(\"Done Sleeping\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,9 +197,10 @@
           "ename": "KeyboardInterrupt",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-3-626f81edbca4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[1;34m\"Sleeping\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# sleep for a while; interrupt me!\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[1;34m\"Done Sleeping\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-fb6d98dc021a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Sleeping\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# sleep for a while; interrupt me!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Done Sleeping\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
@@ -201,9 +212,9 @@
         "id": "Wej_mEyXQSHc"
       },
       "source": [
-        "## System aliases\n",
+        "## システムコマンド (System aliases)\n",
         "\n",
-        "Jupyter includes shortcuts for common operations, such as ls:"
+        "Jupyter は `ls` のようなシステム処理を Jupyter 上で実行することができます。"
       ]
     },
     {
@@ -212,41 +223,13 @@
         "cellView": "both",
         "colab_type": "code",
         "id": "5OCYEvK5QSHf",
-        "colab": {
-          "height": 323
-        },
-        "outputId": "2ee8ae66-72ed-425c-e20b-bc5ac307ef3e"
+        "colab": {}
       },
       "source": [
         "!ls /bin"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[0m\u001b[01;36march\u001b[0m@      \u001b[01;32mdmesg\u001b[0m*          \u001b[01;32mls\u001b[0m*          \u001b[01;32mpwd\u001b[0m*        \u001b[01;32mtrue\u001b[0m*\r\n",
-            "\u001b[01;36mawk\u001b[0m@       \u001b[01;32mdnsdomainname\u001b[0m*  \u001b[01;32mlsmod\u001b[0m*       \u001b[01;32mreadlink\u001b[0m*   \u001b[01;32mumount\u001b[0m*\r\n",
-            "\u001b[01;36mbasename\u001b[0m@  \u001b[01;32mdomainname\u001b[0m*     \u001b[01;32mmail\u001b[0m*        \u001b[01;36mred\u001b[0m@        \u001b[01;32muname\u001b[0m*\r\n",
-            "\u001b[01;32mbash\u001b[0m*      \u001b[01;32mecho\u001b[0m*           \u001b[01;32mmkdir\u001b[0m*       \u001b[01;32mrm\u001b[0m*         \u001b[01;32muncompress\u001b[0m*\r\n",
-            "\u001b[01;36mbunzip2\u001b[0m@   \u001b[01;36med\u001b[0m@             \u001b[01;32mmknod\u001b[0m*       \u001b[01;32mrmdir\u001b[0m*      \u001b[01;32musleep\u001b[0m*\r\n",
-            "\u001b[01;32mbusybox\u001b[0m*   \u001b[01;32megrep\u001b[0m*          \u001b[01;32mmktemp\u001b[0m*      \u001b[01;32mrun-parts\u001b[0m*  \u001b[01;32mver\u001b[0m*\r\n",
-            "\u001b[01;36mbzip2\u001b[0m@     \u001b[01;32mfalse\u001b[0m*          \u001b[01;32mmore\u001b[0m*        \u001b[01;32msed\u001b[0m*        \u001b[01;32mwhich\u001b[0m*\r\n",
-            "\u001b[01;32mcat\u001b[0m*       \u001b[01;32mfgrep\u001b[0m*          \u001b[01;32mmount\u001b[0m*       \u001b[01;36msh\u001b[0m@         \u001b[01;34mwrapper_checkpoints\u001b[0m/\r\n",
-            "\u001b[01;32mchgrp\u001b[0m*     \u001b[01;36mgawk\u001b[0m@           \u001b[01;32mmountpoint\u001b[0m*  \u001b[01;32msleep\u001b[0m*      \u001b[01;32mzcat\u001b[0m*\r\n",
-            "\u001b[01;32mchmod\u001b[0m*     \u001b[01;32mgrep\u001b[0m*           \u001b[01;32mmv\u001b[0m*          \u001b[01;36msort\u001b[0m@       \u001b[01;32mzcmp\u001b[0m*\r\n",
-            "\u001b[01;32mchown\u001b[0m*     \u001b[01;32mgunzip\u001b[0m*         \u001b[01;32mnc\u001b[0m*          \u001b[01;32mstty\u001b[0m*       \u001b[01;32mzdiff\u001b[0m*\r\n",
-            "\u001b[01;32mcp\u001b[0m*        \u001b[01;32mgzexe\u001b[0m*          \u001b[01;36mnetcat\u001b[0m@      \u001b[01;32msu\u001b[0m*         \u001b[01;32mzegrep\u001b[0m*\r\n",
-            "\u001b[01;32mcpio\u001b[0m*      \u001b[01;32mgzip\u001b[0m*           \u001b[01;32mnetstat\u001b[0m*     \u001b[01;32msync\u001b[0m*       \u001b[01;32mzfgrep\u001b[0m*\r\n",
-            "\u001b[01;36mcsh\u001b[0m@       \u001b[01;32mhostname\u001b[0m*       \u001b[01;36mnice\u001b[0m@        \u001b[01;32mtailf\u001b[0m*      \u001b[01;32mzforce\u001b[0m*\r\n",
-            "\u001b[01;36mcut\u001b[0m@       \u001b[01;36migawk\u001b[0m@          \u001b[01;36mpidof\u001b[0m@       \u001b[01;32mtar\u001b[0m*        \u001b[01;32mzgrep\u001b[0m*\r\n",
-            "\u001b[01;32mdate\u001b[0m*      \u001b[01;32mkill\u001b[0m*           \u001b[01;32mping\u001b[0m*        \u001b[01;36mtcsh\u001b[0m@       \u001b[01;32mzless\u001b[0m*\r\n",
-            "\u001b[01;32mdd\u001b[0m*        \u001b[01;32mln\u001b[0m*             \u001b[01;32mping6\u001b[0m*       \u001b[01;32mtempfile\u001b[0m*   \u001b[01;32mzmore\u001b[0m*\r\n",
-            "\u001b[01;32mdf\u001b[0m*        \u001b[01;32mlogin\u001b[0m*          \u001b[01;32mps\u001b[0m*          \u001b[01;32mtouch\u001b[0m*      \u001b[01;32mznew\u001b[0m*\r\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -255,12 +238,17 @@
         "id": "y8Da6JWKQSHh"
       },
       "source": [
-        "That `!ls` probably generated a large output. You can select the cell and clear the output by either: \n",
+        "たぶん、`!ls` は大きな出力になってしまったと思います。\n",
         "\n",
-        "1. Clicking on the clear output button (x) in the toolbar above the cell; or\n",
-        "2. Right clicking the left gutter of the output area and selecting \"Clear output\" from the context menu.\n",
+        "出力を消去するには2つの方法があります。\n",
         "\n",
-        "Execute any other process using `!` with string interpolation from python variables, and note the result can be assigned to a variable:"
+        "1. 出力のセルの`(x)`ボタンをクリックする。\n",
+        "2. 出力セルの左側にあるを右クリックし、コンテキストメニューを表示し、\"出力を消去\"を選ぶ。\n",
+        "3. セルを選択し、セル上部にあるの三点メニューで\"出力を消去\"を選ぶ。\n",
+        "\n",
+        "Execute any other process using `!` with string interpolation from python variables, and note the result can be assigned to a variable:\n",
+        "\n",
+        "次の例では、`!`とエスケープ文字列を使って、python上の変数を処理した結果を変数に入れています。\n"
       ]
     },
     {
@@ -270,28 +258,33 @@
         "colab_type": "code",
         "id": "zqGrv0blQSHj",
         "colab": {
-          "height": 35
+          "base_uri": "https://localhost:8080/",
+          "height": 101
         },
-        "outputId": "4970b019-8ae1-47d3-cbc9-ebdb69ee1031"
+        "outputId": "96ab6740-89a1-4808-bce6-df5242b57017"
       },
       "source": [
-        "message = 'Colaboratory is great!'\n",
-        "foo = !echo -e '$message\\n$message'\n",
+        "message = 'Colaboratory is \\ngreat!'\n",
+        "foo = !echo -e '$message\\n$message\\t$message'\n",
         "foo"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['Colaboratory is great!', 'Colaboratory is great!']"
+              "['Colaboratory is ',\n",
+              " 'great!',\n",
+              " 'Colaboratory is ',\n",
+              " 'great!\\tColaboratory is ',\n",
+              " 'great!']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 0
+          "execution_count": 10
         }
       ]
     },
@@ -302,7 +295,11 @@
         "id": "qM4myQGfQboQ"
       },
       "source": [
-        "## Magics\n",
+        "## マジック (Magics)\n",
+        "ColabではJupyterのマジックの考え方が使えます。\n",
+        "マジックにより、セルのテキストの処理方法を簡単に変えることができます。\n",
+        "Jupyter のマジックについては [Jupyter's magics page](http://nbviewer.jupyter.org/github/ipython/ipython/blob/1.x/examples/notebooks/Cell%20Magics.ipynb) を参照してください。\n",
+        "\n",
         "Colaboratory shares the notion of magics from Jupyter. There are shorthand annotations that change how a cell's text is executed. To learn more, see [Jupyter's magics page](http://nbviewer.jupyter.org/github/ipython/ipython/blob/1.x/examples/notebooks/Cell%20Magics.ipynb). \n"
       ]
     },
@@ -313,24 +310,25 @@
         "colab_type": "code",
         "id": "odfM-_GxWbCy",
         "colab": {
-          "height": 38
+          "base_uri": "https://localhost:8080/",
+          "height": 36
         },
-        "outputId": "3f059816-dc25-4670-ca46-e2ee50a9490e"
+        "outputId": "9027db44-5688-472a-9d5f-035c432beeb8"
       },
       "source": [
         "%%html\n",
-        "<marquee style='width: 30%; color: blue;'><b>Whee!</b></marquee>"
+        "<marquee style='width: 30%; color: slategrey;' behavior=\"alternate\"><b>Whee!</b></marquee>"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<marquee style='width: 30%; color: blue;'><b>Whee!</b></marquee>"
+              "<marquee style='width: 30%; color: slategrey;' behavior=\"alternate\"><b>Whee!</b></marquee>"
             ],
             "text/plain": [
-              "<IPython.core.display.HTML at 0x558e1385fc10>"
+              "<IPython.core.display.HTML object>"
             ]
           },
           "metadata": {
@@ -345,30 +343,33 @@
         "colab_type": "code",
         "id": "_YrTcK7k22Fp",
         "colab": {
-          "height": 221
+          "base_uri": "https://localhost:8080/",
+          "height": 219
         },
-        "outputId": "bb3a69dd-49b7-4a6c-966a-64f77007a525"
+        "outputId": "faf04608-fb3c-4c22-d488-d2cc71664d19"
       },
       "source": [
         "%%html\n",
+        "<div style=\"text-align: center;\">\n",
         "<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 450 400\" width=\"200\" height=\"200\">\n",
         "  <rect x=\"80\" y=\"60\" width=\"250\" height=\"250\" rx=\"20\" style=\"fill:red; stroke:black; fill-opacity:0.7\" />\n",
         "  <rect x=\"180\" y=\"110\" width=\"250\" height=\"250\" rx=\"40\" style=\"fill:blue; stroke:black; fill-opacity:0.5;\" />\n",
-        "</svg>"
+        "</svg></div>"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
+              "<div style=\"text-align: center;\">\n",
               "<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 450 400\" width=\"200\" height=\"200\">\n",
               "  <rect x=\"80\" y=\"60\" width=\"250\" height=\"250\" rx=\"20\" style=\"fill:red; stroke:black; fill-opacity:0.7\" />\n",
               "  <rect x=\"180\" y=\"110\" width=\"250\" height=\"250\" rx=\"40\" style=\"fill:blue; stroke:black; fill-opacity:0.5;\" />\n",
-              "</svg>"
+              "</svg></div>"
             ],
             "text/plain": [
-              "<IPython.core.display.HTML at 0x5636f4dd54d0>"
+              "<IPython.core.display.HTML object>"
             ]
           },
           "metadata": {
