--- a/010kagglepythonhello001.ipynb
+++ b/010kagglepythonhello001.ipynb
@@ -6,7 +6,7 @@
       "name": "010kagglepythonhello001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNvw3yFl8+Nmy5giMBN5Lxo",
+      "authorship_tag": "ABX9TyMWoIEvBpd3tE7bqps+n1nR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "viking_song = \"Spam \" * spam_amount\n",
         "print(viking_song)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +139,11 @@
         "colab_type": "text"
       },
       "source": [
-        "Variable assignment: Here we create a variable called spam_amount and assign it the value of 0 using =, which is called the assignment operator.\n",
+        "変数への代入: ここでは spam_amount という名前の変数が作られ、`=`を用いて0がアサインされています。`=`は代入演算子と呼ばれます。\n",
+        "\n",
+        "> 補足: Java or C++) など他のプログラミング言語を経験した方は、Pythonでは必要のないいくつかの特徴に気づいたかもしれません。\n",
+        "* 値を代入する前に、変数 spam_amount を宣言する必要はありません\n",
+        "* we don't need to tell Python what type of value spam_amount is going to refer to. In fact, we can even go on to reassign spam_amount to refer to a different sort of thing like a string or a boolean.\n",
         "\n",
         "> Aside: If you've programmed in certain other languages (like Java or C++), you might be noticing some things Python doesn't require us to do here:\n",
         "* we don't need to \"declare\" spam_amount before assigning to it\n",
