--- a/010kagglepythonhello001.ipynb
+++ b/010kagglepythonhello001.ipynb
@@ -6,7 +6,7 @@
       "name": "010kagglepythonhello001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYNYy7tC0p/O4sPuhVzFeT",
+      "authorship_tag": "ABX9TyPrUsQPYvr9ECRBuDNvGoP6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,7 +129,7 @@
       "source": [
         "spam_amount = 0"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
       "source": [
         "print(spam_amount)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
         "spam_amount = spam_amount + 4 \n",
         "\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +207,37 @@
         "\n",
         "次の行は再代入 `reassignment` の例になります。変数を作成したときと同じ `=` 演算子を使います。\n",
         "\n",
-        "In this case, the value we're assigning to spam_amount involves some simple arithmetic on its previous value. When it encounters this line, Python evaluates the expression on the right-hand-side of the = (0 + 4 = 4), and then assigns that value to the variable on the left-hand-side."
+        "この例では `spam_amount` への再代入に際し、以前の値に簡単な計算を施しています。この行のところに来ると、Pythonは`=`の右辺すなわち `(0 + 4 = 4)` を評価し、その結果を、左辺のの変数に代入します。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TYj8djVwFmL7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "c5549736-0a44-4088-dedb-abb67e9063f4"
+      },
+      "source": [
+        "if spam_amount > 0:\n",
+        "    print(\"But I don't want ANY spam!\")\n",
+        "\n",
+        "viking_song = \"Spam Spam Spam\"\n",
+        "print(viking_song)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "But I don't want ANY spam!\n",
+            "Spam Spam Spam\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -217,14 +247,17 @@
         "colab_type": "text"
       },
       "source": [
-        "if spam_amount > 0:\n",
-        "    print(\"But I don't want ANY spam!\")\n",
-        "\n",
-        "viking_song = \"Spam Spam Spam\"\n",
-        "print(viking_song)\n",
-        "But I don't want ANY spam!\n",
-        "Spam Spam Spam\n",
-        "We won't talk much about \"conditionals\" until later, but, even if you've never coded before, you can probably guess what this does. Python is prized for its readability and the simplicity."
+        "条件式 \"conditionals\" についてはまだ詳しくは述べませんが、プログラムしたことのない人でもこのコードのやっていることは想像がつくでしょう。Pythonはとても読みやすく、簡単な言語です。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2AXnhZPYEvyU",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -234,7 +267,12 @@
         "colab_type": "text"
       },
       "source": [
-        "Note how we indicated which code belongs to the if. \"But I don't want ANY spam!\" is only supposed to be printed if spam_amount is positive. But the later code (like print(viking_song)) should be executed no matter what. How do we (and Python) know that?\n",
+        "どのようにして、コードの if に属する部分を区別しているか理解してください。\n",
+        " \"But I don't want ANY spam!\" が出力されるのは、spam_amount が正の値の時だけです。ところが、そのあとのコード(たとえば print(viking_song))は条件にかかわらず実行されます。Pythonはどうやってこれを区別しているのでしょうか。\n",
+        "\n",
+        "if のある行のコロン (:) が\n",
+        "\n",
+        "\n",
         "\n",
         "The colon (:) at the end of the if line indicates that a new \"code block\" is starting. Subsequent lines which are indented are part of that code block. Some other languages use {curly braces} to mark the beginning and end of code blocks. Python's use of meaningful whitespace can be surprising to programmers who are accustomed to other languages, but in practice it can lead to more consistent and readable code than languages that do not enforce indentation of code blocks."
       ]
