Colaboratory を使用して作成しました

--- a/010kagglepythonhello001.ipynb
+++ b/010kagglepythonhello001.ipynb
@@ -6,7 +6,7 @@
       "name": "010kagglepythonhello001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNbwhjXmCSEtl/PGll9QOHb",
+      "authorship_tag": "ABX9TyPUiapS8B2gorN2zecjZNAM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "viking_song = \"Spam \" * spam_amount\n",
         "print(viking_song)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
         "spam_amount = spam_amount + 4 \n",
         "\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
         "viking_song=\"spam spam spam\"\n",
         "print(viking_song)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,6 +266,49 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "sqZmcC-1aAAj",
+        "colab_type": "text"
+      },
+      "source": [
+        "次からの行はviking_songを扱っていて、4スペースでインデントされていません。なので、if のコードブロックには属していません。インデントされたコードブロックの例はあとで関数の定義とくり返しの説明の時に出てきます。\n",
+        "\n",
+        "このコードスニペットで初めてPythonにおける文字列が出てきています。\n",
+        "```\n",
+        "\"But I don't want ANY spam!\"\n",
+        "```\n",
+        "\n",
+        "文字列はダブルクォートもしくはシングルクォートで囲まれます。この例の場合は文字列がシングルクォートを含んでいますので、なんらかの対応をしないと全体をシングルクォートで囲むことはできません。対応方法については後述します。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k8uEKGPJmFz4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "0c229b23-cbb7-4e1f-9ce0-1a418f3bb9dc"
+      },
+      "source": [
+        "viking_song = \"Spam \" * spam_amount\n",
+        "print(viking_song)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Spam Spam Spam Spam \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "2AXnhZPYEvyU",
         "colab_type": "text"
       },
@@ -276,30 +319,14 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "sqZmcC-1aAAj",
-        "colab_type": "text"
-      },
-      "source": [
-        "viking_songを扱っているあとの行は4スペースでインデント\n",
-        "\n",
-        "The later lines dealing with viking_song are not indented with an extra 4 spaces, so they're not a part of the if's code block. We'll see more examples of indented code blocks later when we define functions and using loops.\n",
-        "\n",
-        "This code snippet is also our first sighting of a string in Python:\n",
-        "\n",
-        "\"But I don't want ANY spam!\"\n",
-        "Strings can be marked either by double or single quotation marks. (But because this particular string contains a single-quote character, we might confuse Python by trying to surround it with single-quotes, unless we're careful.)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1boVcCdnaC8u",
         "colab_type": "text"
       },
       "source": [
-        "viking_song = \"Spam \" * spam_amount\n",
-        "print(viking_song)\n",
-        "Spam Spam Spam Spam \n",
+        "`*` 演算子はふつうはふたつの数字を掛け合わせる (3 * 3 ->9) のに使われますが、おもしろいことに文字列に `*` 演算子を使うと\n",
+        "\n",
+        "\n",
+        "\n",
         "The * operator can be used to multiply two numbers (3 * 3 evaluates to 9), but amusingly enough, we can also multiply a string by a number, to get a version that's been repeated that many times. Python offers a number of cheeky little time-saving tricks like this where operators like * and + have a different meaning depending on what kind of thing they're applied to. (The technical term for this is operator overloading)"
       ]
     },
