--- a/010kagglepythonhello001.ipynb
+++ b/010kagglepythonhello001.ipynb
@@ -6,7 +6,7 @@
       "name": "010kagglepythonhello001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPhok5yABz4I6Wa4E6jdhls",
+      "authorship_tag": "ABX9TyNDHndgRmwOplp89CYifELg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -347,7 +347,7 @@
       "source": [
         "spam_amount = 0"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -374,7 +374,7 @@
       "source": [
         "type (spam_amount)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +415,7 @@
       "source": [
         "type (19.95)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -439,13 +439,11 @@
       },
       "source": [
         "\n",
-        "type(19.95)\n",
-        "float\n",
-        "A float is a number with a decimal place - very useful for representing things like weights or proportions.\n",
+        "`float` は浮動小数点型で重さや割合を表すのに便利な数字です。\n",
         "\n",
-        "type() is the second built-in function we've seen (after print()), and it's another good one to remember. It's very useful to be able to ask Python \"what kind of thing is this?\".\n",
+        "`type()` は `print()` と同様にPythonに始めからある `built-in` 関数の一つです。型を確認するのに便利に使えます。\n",
         "\n",
-        "A natural thing to want to do with numbers is perform arithmetic. We've seen the + operator for addition, and the * operator for multiplication (of a sort). Python also has us covered for the rest of the basic buttons on your calculator:"
+        "数字について電卓にあるような四則演算の演算子は Python にもあります。"
       ]
     },
     {
@@ -455,26 +453,85 @@
         "colab_type": "text"
       },
       "source": [
+        "| Operator\t| Name\t| Description |\n",
+        "| ---- | ---- | ----|\n",
+        "|a + b  | Addition\t     |   Sum of a and b |\n",
+        "|a - b\t| Subtraction\t   |   Difference of a and b |\n",
+        "|a * b\t| Multiplication |\t Product of a and b |\n",
+        "|a / b\t| True division\t |   Quotient of a and b |\n",
+        "|a // b\t| Floor division |\t Quotient of a and b, removing fractional parts |\n",
+        "|a % b\t| Modulus\t       |   Integer remainder after division of a by b |\n",
+        "|a ** b\t| Exponentiation |\t a raised to the power of b |\n",
+        "|-a\t    | Negation\t     |   The negative of a |\n",
         "\n",
+        "割り算の演算子が2種類あることに注意してください。\n",
+        "電卓の割り算は \"True division\" です。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5vVRzjxe_BbW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "66777b77-acc0-46b0-9c7f-0bc0057b0f38"
+      },
+      "source": [
+        "print (5 / 2)\n",
+        "print (6 / 2)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.5\n",
+            "3.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OiCyMtko_Jf6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "e9b6e657-16ba-428a-9313-d700d9ba86ed"
+      },
+      "source": [
+        "print (9 // 4)\n",
+        "print (-9 // 4)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "-3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ogC_bO-J-_aO",
+        "colab_type": "text"
+      },
+      "source": [
+        "演算子 `/` の結果は常に `float` です。\n",
         "\n",
-        "Operator\tName\tDescription\n",
-        "a + b\tAddition\tSum of a and b\n",
-        "a - b\tSubtraction\tDifference of a and b\n",
-        "a * b\tMultiplication\tProduct of a and b\n",
-        "a / b\tTrue division\tQuotient of a and b\n",
-        "a // b\tFloor division\tQuotient of a and b, removing fractional parts\n",
-        "a % b\tModulus\tInteger remainder after division of a by b\n",
-        "a ** b\tExponentiation\ta raised to the power of b\n",
-        "-a\tNegation\tThe negative of a\n",
-        "One interesting observation here is that, whereas your calculator probably just has one button for division, Python can do two kinds. \"True division\" is basically what your calculator does:\n",
-        "\n",
-        "print(5 / 2)\n",
-        "print(6 / 2)\n",
-        "2.5\n",
-        "3.0\n",
-        "It always gives us a float.\n",
-        "\n",
-        "The // operator gives us a result that's rounded down to the next integer."
+        "演算子 `//` は割り算の結果以下の最大の整数を返します。"
       ]
     },
     {
