--- a/010kagglepythonhello001.ipynb
+++ b/010kagglepythonhello001.ipynb
@@ -6,7 +6,7 @@
       "name": "010kagglepythonhello001.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPKjI6jUvzHbicXXY3pTKNO",
+      "authorship_tag": "ABX9TyPDmfx/916frf2QhYQVjGZK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -539,7 +539,7 @@
         "print (5 // 2)\n",
         "print (6 // 2)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
       "source": [
         "8 - 3 + 2"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -614,7 +614,7 @@
       "source": [
         "-3 + 4 * 2"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -658,7 +658,7 @@
         "total_height_meters = (hat_height_cm + my_height_cm) / 100\n",
         "print(\"Height in meters = \" ,  total_height_meters, \"?\")"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -696,7 +696,7 @@
         "print(min(1, 2, 3)) \n",
         "print(max(1, 2, 3))"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,7 +733,7 @@
         "print(abs(32)) \n",
         "print(abs(-32)) "
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +770,7 @@
         "print(float(10)) \n",
         "print(int(3.33))"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,7 +798,7 @@
         "print(int('807') + 1)\n",
         "10.0\n"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -819,16 +819,6 @@
           },
           "execution_count": 45
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JVgF1fOSfU4A",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -870,7 +860,7 @@
         "print(\"You've successfully run some Python code\") \n",
         "print(\"Congratulations!\")"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -900,14 +890,60 @@
         "colab_type": "text"
       },
       "source": [
-        "問題 0\n",
-        "0.\n",
-        "This is a silly question intended as an introduction to the format we use for hands-on exercises throughout all Kaggle courses.\n",
+        "### 問題 0 変数、代入、文字列\n",
+        "*あなたの好きな色は何色ですか？*\n",
         "\n",
-        "*What is your favorite color? *\n",
-        "\n",
-        "To complete this question, create a variable called color in the cell below with an appropriate value. The function call q0.check() (which we've already provided in the cell below) will check your answer.\n",
+        "colorという変数を作って、値を代入する。文字列はシングルクォートまたはダブルクォートで囲まれます。\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wPONAdf2Y8kz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "47c812f4-e55f-4fe7-efeb-a3a97bb14bbf"
+      },
+      "source": [
+        "color = \"pink\"\n",
+        "print(color)\n",
+        "type(color)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "pink\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QoVDyTW_Z_l8",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -917,44 +953,7 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "\n",
-        "# create a variable called color with an appropriate value on the line below\n",
-        "# (Remember, strings in Python must be enclosed in 'single' or \"double\" quotes)\n",
-        "____\n",
-        "​\n",
-        "# Check your answer\n",
-        "q0.check()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "Didn't get the right answer? How do you not even know your own favorite color?!\n",
-        "\n",
-        "Delete the # in the line below to make one of the lines run. You can choose between getting a hint or the full answer by choosing which line to remove the # from.\n",
-        "\n",
-        "Removing the # is called uncommenting, because it changes that line from a \"comment\" which Python doesn't run to code, which Python does run.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "#q0.hint()\n",
-        "#q0.solution()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "The upcoming questions work the same way. The only thing that will change are the question numbers. For the next question, you'll call q1.check(), q1.hint(), q1.solution(), for question 2, you'll call q2.check(), and so on.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "### 問題 1 四則演算\n",
         "1.\n",
         "Complete the code below. In case it's helpful, here is the table of available arithmetic operations:\n",
         "\n",
